--- a/index.html
+++ b/index.html
@@ -5,73 +5,88 @@
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection" />
-    <link type="text/css" rel="stylesheet" href="css/custom.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/custom.css" media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 </head>
 
 <body>
-    <!--       navigation bar start-->
-    <nav>
-        <div class="nav-wrapper container">
-            <a href="/" class="brand-logo">Bappa</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-                <li><a href="#" data-activates="slide-out" class="button-collapse show"><i class="material-icons">view_module</i></a>
+<!--       navigation bar start-->
+<nav>
+    <div class="nav-wrapper container">
+        <a href="/" class="brand-logo">Bappa</a>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="sass.html"><i class="material-icons">search</i></a></li>
+            <li><a href="#" data-activates="slide-out" class="button-collapse show"><i class="material-icons">view_module</i></a>
+            </li>
+            <li>
+                <a href="#" class="dropdown-button" data-activates='dropdown1'>
+                    <i class="material-icons">more_vert</i>
+                </a>
+                <ul id='dropdown1' class='dropdown-content'>
+                    <li><a href="#!">Settings</a></li>
+                    <li><a href="#!">Password Change</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#!">Logout</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="">
+    <div class="row">
+        <!-- sidebar start-->
+        <div class="col s12 m2">
+            <ul id="slide-out" class="side-nav">
+                <li><a href="#!">First Sidebar Link</a></li>
+                <li><a href="#!">Second Sidebar Link</a></li>
+            </ul>
+        </div>
+        <!-- sidebbar ends-->
+
+        <div class="col s12 m2">
+            <ul class="collapsible" data-collapsible="accordion">
+                <li>
+                    <div class="collapsible-header"><i class="fa fa-user"></i> User</div>
+                    <div class="collapsible-body">
+                        <div class="collection">
+                            <a href="#" class="collection-item"><i class="fa fa-plus"></i> Add</a>
+                            <a href="#" class="collection-item"><i class="fa fa-pencil"></i> Edit</a>
+                            <a href="#" class="collection-item"><i class="fa fa-trash"></i> Delete</a>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    <a href="#" class="dropdown-button" data-activates='dropdown1'>
-                        <i class="material-icons">more_vert</i>
-                    </a>
-                    <ul id='dropdown1' class='dropdown-content'>
-                        <li><a href="#!">Settings</a></li>
-                        <li><a href="#!">Password Change</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#!">Logout</a></li>
-                    </ul>
+                    <div class="collapsible-header"><i class="fa fa-image"></i> Gallery</div>
+                    <div class="collapsible-body">
+                        <div class="collection">
+                            <a href="#" class="collection-item"><i class="fa fa-plus"></i> Add Image</a>
+                            <a href="#" class="collection-item"><i class="fa fa-pencil"></i> Edit Image</a>
+                            <a href="#" class="collection-item"><i class="fa fa-trash"></i> Delete Image</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="fa fa-users"></i>Contact</div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">toc</i>Address</div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">view_list</i>Newsletter</div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">settings_remote</i>About Us</div>
                 </li>
             </ul>
         </div>
-    </nav>
-    <div class="">
-        <div class="row">
-            <!-- sidebar start-->
-            <div class="col s12 m2">
-                <ul id="slide-out" class="side-nav">
-                    <li><a href="#!">First Sidebar Link</a></li>
-                    <li><a href="#!">Second Sidebar Link</a></li>
-                </ul>
-            </div>
-            <!-- sidebbar ends-->
 
-
-            <div class="col s12 m2 zerop">
-                <ul class="collapsible" data-collapsible="accordion">
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">filter_drama</i>User</div>
-                        <div class="collapsible-body">
-                            <div class="collection">
-                                <a href="#" class="collection-item"><i class="fa fa-plus"></i> Add</a>
-                                <a href="#" class="collection-item"><i class="fa fa-trash"></i> Delete</a>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                        <div class="collapsible-body">Lorem ipsum dolor sit amet.</div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-                        <div class="collapsible-body">Lorem ipsum dolor sit amet.</div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col s12 m10">
+        <div class="col m10">
+            <div class="card-panel">
                 <div class="row">
                     <div class="col s12">
                         <ul class="tabs">
@@ -80,42 +95,26 @@
                         </ul>
                     </div>
                     <div id="test1" class="col s12">
-                        <div class="card red lighten-5" style="overflow:hidden">
+                        <div class="card no-shadow" style="overflow:hidden;">
                             <div class="card-content ">
-                                <span class="card-title">Registration form</span>
-                                <hr>
+                                <span class="card-title">Login</span>
                                 <form class="col s12">
                                     <div class="row">
-                                        <div class="input-field col s6">
-                                            <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                                            <label for="first_name">First Name</label>
-                                        </div>
-                                        <div class="input-field col s6">
-                                            <input id="last_name" type="text" class="validate" required>
-                                            <label for="last_name">Last Name</label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
                                         <div class="input-field col s12">
-                                            <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-                                            <label for="disabled">Disabled</label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="input-field col s12">
-                                            <input id="password" type="password" class="validate">
-                                            <label for="password">Password</label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="input-field col s12">
-                                            <input id="email" type="email" class="validate">
+                                            <input id="login_email" type="email" name="email" class="validate">
                                             <label for="email">Email</label>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="input-field col s12">
-                                            <input type="button" class="waves-effect waves-light btn" value="Submit">
+                                            <input id="login_password" type="password" name="password" class="validate">
+                                            <label for="password">Password</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <input type="button" class="waves-effect waves-light btn" value="Login">
                                         </div>
                                     </div>
                                 </form>
@@ -123,51 +122,71 @@
                         </div>
                     </div>
                     <div id="test2" class="col s12">
-                        <div class="card blue-grey darken-1">
-                            <div class="card-content white-text">
-                                <span class="card-title">Card Title</span>
+                        <div class="card no-shadow" style="overflow: hidden">
+                            <div class="card-content">
+                                <span class="card-title">Registration</span>
+                                <form class="col s12">
+                                    <div class="row">
+                                        <div class="input-field col s6">
+                                            <input id="first_name" type="text"
+                                                   class="validate">
+                                            <label for="first_name">First Name</label>
+                                        </div>
+                                        <div class="input-field col s6">
+                                            <input id="last_name" type="text" class="validate" required>
+                                            <label for="last_name">Last Name</label>
+                                        </div>
 
-                                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                            </div>
-                            <div class="card-action">
-                                <a href="#">This is a link</a>
-                                <a href="#">This is a link</a>
+                                        <div class="input-field col s6">
+                                            <input id="email" type="email" class="validate">
+                                            <label for="email">Email</label>
+                                        </div>
+
+                                        <div class="input-field col s6">
+                                            <input id="password" type="password" class="validate">
+                                            <label for="password">Password</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <input type="button" class="waves-effect waves-light btn" value="Register">
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
             </div>
-
-
         </div>
     </div>
-    <!--       navigation bar end-->
+</div>
+<!--       navigation bar end-->
 
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script>
-        //$('.button-collapse').sideNav('show');
-        $('.button-collapse').sideNav({
-            menuWidth: 300, // Default is 240
-            edge: 'left', // Choose the horizontal origin
-            closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
-        });
-        $('.dropdown-button').dropdown({
-            inDuration: 300,
-            outDuration: 225,
-            constrain_width: false, // Does not change width of dropdown to that of the activator
-            hover: true, // Activate on hover
-            gutter: 0, // Spacing from edge
-            belowOrigin: true, // Displays dropdown below the button
-            alignment: 'left' // Displays dropdown with edge aligned to the left of button
-        });
-        $(function () {
-            $('ul.tabs').tabs();
-        });
-    </script>
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script>
+    //$('.button-collapse').sideNav('show');
+    $('.button-collapse').sideNav({
+        menuWidth: 300, // Default is 240
+        edge: 'left', // Choose the horizontal origin
+        closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
+    });
+    $('.dropdown-button').dropdown({
+        inDuration: 300,
+        outDuration: 225,
+        constrain_width: false, // Does not change width of dropdown to that of the activator
+        hover: true, // Activate on hover
+        gutter: 0, // Spacing from edge
+        belowOrigin: true, // Displays dropdown below the button
+        alignment: 'left' // Displays dropdown with edge aligned to the left of button
+    });
+    $(function () {
+        $('ul.tabs').tabs();
+    });
+</script>
 </body>
 
 </html>
